syntax = "proto3";

package reviews;

service ReviewsService {
  rpc CreateReview (CreateReviewRequest) returns (Review) {}
  rpc UpdateReview (UpdateReviewRequest) returns (Review) {}
  rpc GetReview (GetReviewRequest) returns (Review) {}
  rpc GetUserReviews (GetUserReviewsRequest) returns (ReviewsResponse) {}
}

message CreateReviewRequest {
  string reviewerId = 1;
  string reviewedId = 2;
  int32 rating = 3;
  string comment = 4;
  string exchangeId = 5;
}

message UpdateReviewRequest {
  string reviewId = 1;
  optional int32 rating = 2;
  optional string comment = 3;
}

message GetReviewRequest {
  string reviewId = 1;
}

message GetUserReviewsRequest {
  string userId = 1;
  bool asReviewer = 2;
  int32 page = 3;
  int32 limit = 4;
}

message ReviewsResponse {
  repeated Review reviews = 1;
  int32 total = 2;
  int32 page = 3;
  int32 limit = 4;
}

message Review {
  string id = 1;
  string reviewerId = 2;
  string reviewedId = 3;
  int32 rating = 4;
  string comment = 5;
  string exchangeId = 6;
  string createdAt = 7;
  string updatedAt = 8;
} 