syntax = "proto3";

package transactions;

service TransactionsService {
  rpc CreateTransaction (CreateTransactionRequest) returns (CreateTransactionResponse);
  rpc GetTransaction (GetTransactionRequest) returns (GetTransactionResponse);
  rpc ListTransactions (ListTransactionsRequest) returns (ListTransactionsResponse);
  rpc UpdateTransactionStatus (UpdateTransactionStatusRequest) returns (UpdateTransactionStatusResponse);
}

message CreateTransactionRequest {
  string userId = 1;
  string type = 2;
  double amount = 3;
  string currency = 4;
  string description = 5;
  map<string, string> metadata = 6;
}

message CreateTransactionResponse {
  bool success = 1;
  string transactionId = 2;
}

message GetTransactionRequest {
  string transactionId = 1;
}

message GetTransactionResponse {
  Transaction transaction = 1;
}

message ListTransactionsRequest {
  string userId = 1;
  int32 limit = 2;
  int32 offset = 3;
  string status = 4;
  string type = 5;
}

message ListTransactionsResponse {
  repeated Transaction transactions = 1;
  int32 total = 2;
}

message UpdateTransactionStatusRequest {
  string transactionId = 1;
  string status = 2;
  string reason = 3;
}

message UpdateTransactionStatusResponse {
  bool success = 1;
}

message Transaction {
  string id = 1;
  string userId = 2;
  string type = 3;
  double amount = 4;
  string currency = 5;
  string status = 6;
  string description = 7;
  string createdAt = 8;
  string updatedAt = 9;
  map<string, string> metadata = 10;
} 