syntax = "proto3";

package user;

service UserService {
  rpc CreateUser (CreateUserRequest) returns (User) {}
  rpc UpdateUser (UpdateUserRequest) returns (User) {}
  rpc GetUser (GetUserRequest) returns (User) {}
}

message CreateUserRequest {
  string email = 1;
  string password = 2;
  string firstName = 3;
  string lastName = 4;
  string phoneNumber = 5;
  bool isExchanger = 6;
  string role = 7;
}

message UpdateUserRequest {
  string userId = 1;
  optional string email = 2;
  optional string password = 3;
  optional string role = 4;
}

message GetUserRequest {
  string userId = 1;
}

message User {
  string id = 1;
  string email = 2;
  string name = 3;
  bool isExchanger = 4;
  bool isExchangerActive = 5;
  bool isFrozen = 6;
  string createdAt = 7;
  string updatedAt = 8;
} 